	  (2013-11-19).
	* configs/olimex-lpc-h3131/include/board.h, src/lpc31_boot.c,
	  lpc31_leds.c, lpc31_usbhost.c, and lpc_h3131.h:  Add GPIO 
	  support for LED1/2 and for USB power enable and overcurrent
	  detection (2013-11-19).
	* configs/olimex-lpc-h3131/nsh/defconfig:  Drop loops-per-msec
	  count for the Olimex-LPC-H3131.  It seems to be about 25% as
	  fast as the Embedded Artists EA3131 at the same clocking.
	  (2013-11-19).
	* arch/arm/src/arm/up_cache.S and cache.h:  More cache management
	  functions (2013-11-20).
	* configs/olimex-lpc-h3131/src/Makefile:  Add SDRAM support.
	  Untested and probably needs some fine tuining (2013-11-21)
	* fs/smartfs/README.txt:  Add README for SMARTFS file system.  From
	  Ken Pettit (2013-11-23)
	* tools/mkctags.sh:  A script for creating ctags from Ken Pettit
	  (2013-11-23)
	* configs/sama5d3x-ek/src/sam_nand.c:  Add support for auto-mounting
	  NAND MTD block or NXFFS devices (2013-11-25).
	* include/mtd/mtd.h:  Packed the geometry structure so that it can
	  support larger erase block sizes without increasing the size of
	  the geometry structure (2013-11-27).
	* drivers/mtd/sst25xx.c:  Add another SST25 SerialFlash driver.  This
	  one differs from sst25.c because it supports larger SST25 parts:  In
	  the larger parts support page write instead of byte/word writes like
	  the smaller parts.  From Ken Pettit (2013-11-28).
	* drivers/mtd/smart.c: Fixes a minor bug with SMART partition number
	  reporting (that would only be seen if both partition support and
	  multi-root directory support are enabled at the same time).  From Ken
	  Pettit (2013-11-28).
	* arch/arm/src/stm32/chip/stm32f40xxx_gpio.h: Add support for GPIOK and
	  GPIOJ.  From Ken Pettit (2013-11-28).
	* configs/stm32f429i-disco/extflash, Kconfig, include/board.h,
	  src/stm32f429i-disco-internal.h, up_nsh.c, and up_spi.h:  Add a
	  configuration and board support for an external SST25 FLASH.  From Ken
	  Pettit (2013-11-28).